# trading-bot

./: .dockerignore  .gitignore  AI Trading Bot Claude Prompt.docx  AI_trading_bot_context.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  ERROR_FIXES.md  IMPLEMENTATION_SUMMARY.md  README.md  WINDOWS_SETUP.md  config.example.json  docker-compose.yml  implementation_guide.md  pyproject.toml  quick_start.py  requirements.txt  verify_fixes.ps1
.github/: copilot-instructions.md
bot/: __init__.py  config.py  models.py
bot/api/: __init__.py  server.py
bot/brokers/: __init__.py  base.py  paper.py  paper.py.backup  tradingview.py
bot/data_providers/: __init__.py  base.py  mock.py
bot/engine/: __init__.py  logging_config.py  loop.py
bot/risk/: __init__.py  base.py  basic.py  enhanced.py
bot/strategies/: __init__.py  base.py  example_sma.py
bot/ui/static/css/: dashboard.css
bot/ui/static/js/: dashboard.js
bot/ui/templates/: dashboard.html
scripts/: run_backtest.py  run_backtest_with_chart.py  run_paper_trading.py  run_with_dashboard.py
tests/: test_engine_loop.py  test_enhanced_models.py  test_risk_basic.py  test_risk_enhanced.py  test_strategy_example.py  test_tradingview_broker.py
updates/: implementation_summary.md  quick_start_guide.md  repo_config_enhanced.py  repo_docker_compose.yml  repo_dockerfile.txt  repo_dockerignore.txt  repo_gitignore_updated.txt  repo_test_engine.py  repo_test_models.py  updated_broker_base.py  updated_engine_loop.py  updated_models.py  updated_paper_broker.py  updated_readme.md
