[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-skeleton"
version = "0.1.0"
description = "Modular trading bot skeleton with pluggable components"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
readme = "README.md"
